# public/swagger.json
@@ -19,7 +19,7 @@
     "basePath": "/api/v1",
     "paths": {
         "/question": {
-            "post": {
+            "put": {
                 "description": "SaveQuestionMetadata saves question metadata.",
                 "consumes": [
                     "application/json"
@@ -47,7 +47,7 @@
                 }
             }
         },
-        "/question/{questionName}/{questionId}": {
+        "/question/{questionId}": {
             "get": {
                 "description": "Get Question video by question id.",
                 "produces": [
@@ -59,7 +59,7 @@
                         "type": "string",
                         "description": "question id",
                         "name": "questionId",
-                        "in": "query",
+                        "in": "path",
                         "required": true
                     }
                 ],
@@ -107,6 +107,35 @@
                             }
                         }
                     },
+                    "400": {},
+                    "404": {},
+                    "500": {}
+                }
+            }
+        },
+        "/session": {
+            "put": {
+                "description": "creates an interview session.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "creates an interview session.",
+                "parameters": [
+                    {
+                        "description": "creates an interview session",
+                        "name": "account",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Session"
+                        }
+                    }
+                ],
+                "responses": {
+                    "202": {},
                     "400": {},
                     "404": {},
                     "500": {}
