# routes/routes.go
@@ -36,10 +36,11 @@ func questionsController(apiContext string, r *httprouter.Router, baseController
 	c := &controllers.QuestionsController{BaseController: baseController}
 	r.GET(apiContext+"/questions", c.Action(c.Questions))
 	r.GET(apiContext+"/question/:questionId", c.Action(c.QuestionVideo))
-	r.POST(apiContext+"/question", c.Action(c.SaveQuestionMetadata))
+	r.PUT(apiContext+"/question", c.Action(c.SaveQuestionMetadata))
 }
 
 func sessionController(apiContext string, r *httprouter.Router, baseController controllers.BaseController) {
 	c := &controllers.SessionController{BaseController: baseController}
 	r.GET(apiContext+"/session/:sessionId", c.Action(c.Session))
+	r.PUT(apiContext+"/session", c.Action(c.CreateInterviewSession))
 }
